Creado mediante Colaboratory

--- a/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
+++ b/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
@@ -94,7 +94,7 @@
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosOrdenamiento/insertion.gif?raw=1\" width=\"550\">\n",
         "</center> \n",
         "\n",
-        "Una vez que se comprendió el funcionamiento del algoritmo, sería buena idea plantearnos un par de preguntas, ¿cúal es su implementación en *python*?, ¿cúal es el peor caso para este algoritmo? y ¿a qué orden de complejidad pertenece este algoritmo?."
+        "Una vez que se comprendió el funcionamiento del algoritmo, sería buena idea plantearnos un par de preguntas, ¿cuál es su implementación en *python*?, ¿cuál es el peor caso para este algoritmo? y ¿a qué orden de complejidad pertenece este algoritmo?."
       ]
     },
     {
@@ -105,7 +105,7 @@
       "source": [
         "## Pseudocódigo\n",
         "\n",
-        "El pseudocódigo de este algoritmo se vería de la siguiente forma\n",
+        "El pseudocódigo de este algoritmo se vería de la siguiente forma.\n",
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosOrdenamiento/pseudoinsertion.png?raw=1\" width=\"550\">\n",
@@ -126,7 +126,7 @@
         "\n",
         "Ahora, si la mitad de elementos ya se encuentran ordenados de mayor a menor, y el resto de los elementos a ordenar se encuentran ordenados de menor a mayor, es decir en **orden inverso**, dada la naturaleza de este algoritmo, cada uno de estos elementos ordenados de manera inversa tiene que recorrer todos y cada uno de los elementos ordenados.\n",
         "\n",
-        "Finalmete, si todo el conjunto a ordenar se encuentra ordenado de manera inversa a como se busca, este algoritmo alcanza el máximo número de operaciones a realizar, es decir, **el peor caso**.\n",
+        "Finalmente, si todo el conjunto a ordenar se encuentra ordenado de manera inversa a como se busca, este algoritmo alcanza el máximo número de operaciones a realizar, es decir, **el peor caso**.\n",
         "\n",
         "Una vez identificado el peor caso, ahora veamos que sucede conforme el tamaño del conjunto a ordenar crece, en otras palabras, ¿qué sucede con $T(n)$, conforme incrementamos $n$?.\n",
         "\n"
@@ -142,13 +142,13 @@
         "\n",
         "El caso trivial es cuando $n\\leq1$, en este caso el agoritmo no realiza operación alguna solo se devuelve el mismo conjunto, por lo tanto $T(1)=0$\n",
         "\n",
-        "Supongamos que tenemos un conjunto de 2 elementos a ordenar, es decir $n=2$ y además estos elementos se encuetran en orden inverso. De acuerdo a la definición de este algoritmo, el primer elemento, digamos el elemento $k$ ya se encuentra en su posición y no hace falta realizar operación alguna, sin embargo el segundo elemento ($k+1$) tiene que compararse con el elemento $k$ y ademas recorrerlo una posicón a la derecha, finalmente se devuelve el conjunto orenado, por lo tanto $T(2)=1$.\n",
+        "Supongamos que tenemos un conjunto de 2 elementos a ordenar, es decir $n=2$ y además estos elementos se encuentran en orden inverso. De acuerdo a la definición de este algoritmo, el primer elemento, digamos el elemento $k$ ya se encuentra en su posición y no hace falta realizar operación alguna, sin embargo el segundo elemento ($k+1$) tiene que compararse con el elemento $k$ y ademas recorrerlo una posición a la derecha, finalmente se devuelve el conjunto ordenado, por lo tanto $T(2)=1$.\n",
         "\n",
         "Para el caso en el que $n=3$ se presenta el caso $T(2)$ ya que tenemos que ordenar los 2 primeros elementos del conjunto y además tenemos que comparar al elemento $k+3$ contra todos los ya ordenados y ademas recorrer a todos los elementos ordenados previamente, por lo tanto $T(3)=T(2)+2=1+2=3$.\n",
         "\n",
         "Cuando $n=4$ se presenta el caso $T(3)$ ya que tenemos que ordenar los 3 primeros elementos del conjunto y además tenemos que comparar al elemento $k+4$ contra todos los ya ordenados y ademas recorrer a todos los elementos ordenados previamente, por lo tanto $T(4)=T(3)+3=3+3=6$.\n",
         "\n",
-        "Si pensamos que el conjunto contiene $n$ elementos ordenados de manera inversa, entonces el tiempo (número de operaciones) que le tomará a este algorimto ordenar el conjunto está dada por la expresión recursiva.\n",
+        "Si pensamos que el conjunto contiene $n$ elementos ordenados de manera inversa, entonces el tiempo (número de operaciones) que le tomará a este algoritmo ordenar el conjunto está dada por la expresión recursiva.\n",
         "\n",
         "$$T(n)=T(n-1)+n-1$$\n",
         "\n",
@@ -205,13 +205,13 @@
         "1.   Comenzamos la colección desordenada, recorremos toda la lista y seleccionamos al menor (o mayor) elemento de la colección.\n",
         "2.   Lo colocamos en la primera posición de la lista y el resto de elementos se recorren un lugar a la derecha.\n",
         "3.   Se repite el paso 1, pero comenzando desde la segunda posición de la lista e insertando el siguiente menor elemento, a la derecha del primer elemento.\n",
-        "4.   Una vez que se llega hasta el último elemento podemos asegurar que este es el máximo de la colección y ya se encuentra en su posicón correcta por lo que la colección ya fue ordenada.\n",
+        "4.   Una vez que se llega hasta el último elemento podemos asegurar que este es el máximo de la colección y ya se encuentra en su posición correcta por lo que la colección ya fue ordenada.\n",
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosOrdenamiento/selection.gif?raw=1\" width=\"550\">\n",
         "</center>  \n",
         "\n",
-        "De igual manera que con el algoritmo anterior, sería buena idea plantearnos un par de preguntas, ¿cúal es su implementación en *python*?, ¿cúal es el peor caso para este algoritmo? y ¿a qué orden de complejidad pertenece este algoritmo?."
+        "De igual manera que con el algoritmo anterior, sería buena idea plantearnos un par de preguntas, ¿cuál es su implementación en *python*?, ¿cuál es el peor caso para este algoritmo? y ¿a qué orden de complejidad pertenece este algoritmo?."
       ]
     },
     {
@@ -222,7 +222,7 @@
       "source": [
         "## Pseudocódigo\n",
         "\n",
-        "El pseudocódigo de este algoritmo se vería de la siguiente forma\n",
+        "El pseudocódigo de este algoritmo se vería de la siguiente forma.\n",
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosOrdenamiento/pseudoselec.png?raw=1\" width=\"550\">\n",
@@ -258,9 +258,129 @@
         "id": "dTMtQcsc4QA8"
       },
       "source": [
-        "# *BubbleSort*\n",
+        "# Ordenamiento burbuja *BubbleSort*\n",
         "\n",
-        "Existen muchas restricciones y detalles a tomar en cuenta antes de comenzar con el análisis de algoritmos en paralelo, si embargo una de las más importantes es la ley de Amdahal."
+        "La leyenda cuenta que este algoritmo se asemeja a burbujas emergiendo de un estanque, jamas he logrado ver tales burbujas.\n",
+        "\n",
+        "Este algoritmo toma parejas de elementos del conjunto de izquierda a derecha y va colocando en la posición de la izquierda al valor más pequeño de ambos elementos, se hace esto con las parejas iniciales y al final de la primera pasada podemos asegurar que el elemento que queda en la posición más a la derecha de la colección es el elemento de mayor y ya se encuentra en su posición. Al repetir este proceso el suficiente número de veces, la colección queda ordenada."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LRYDUpRzpQJ5"
+      },
+      "source": [
+        "## Descripción\n",
+        "\n",
+        "1.   Comenzamos la colección desordenada, y se toma la primer pareja de elementos a ordenar, se pasa a la casilla izquierda al menor.\n",
+        "2.   Tomamos la siguiente pareja a la derecha (considerando al elemento que quedo en la casilla derecha de la pareja anterior).\n",
+        "3.   Se compara nuevamente a ambos elementos y se coloca del el mayor de ambos en la casilla derecha.\n",
+        "4.   Una vez que se itero por primera vez a todos los elementos de la colección, podemos asegurar que el elemento en la posición más a la derecha es el mayor y ya se encuentra en su posición final.\n",
+        "5.   Se repiten los pasos 2, 3 y 4 hasta que todos los elementos estén ordenados y tomando en cuenta que en cada iteración se coloca en la posición que le corresponde al elemento más a la derecha, por lo tanto ya no hace falta comparar los elementos que ya hayan sido colocados en su posición final.\n",
+        "\n",
+        "\n",
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosOrdenamiento/bubble.gif?raw=1\" width=\"550\">\n",
+        "</center>  \n",
+        "\n",
+        "Para este punto de la presentación ya debe ser muy sencillo responder las mismas preguntas que nos hicimos con los algoritmos previos."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QTM5hQWUseXG"
+      },
+      "source": [
+        "## Código\n",
+        "\n",
+        "A continuación se muestra el código de este algoritmo."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DfeIm01msc7J",
+        "outputId": "10d761b6-b896-416c-f1e3-7eb47b744645",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# implementacion in-situ del algoritmo burbuja\n",
+        "def bubbleSort(lista):\n",
+        "    #asigno el largo de la lista a una variable\n",
+        "    n = len(lista)\n",
+        "    #bandera para identificar cambios\n",
+        "    intercambio = True\n",
+        "    #variable para saber cuantos han sido ordenados\n",
+        "    j = 0\n",
+        "    #si hay cambios entro al ciclo\n",
+        "    while(intercambio):\n",
+        "        #los j-esimos elementos ya han sido ordenados\n",
+        "        j = j+1\n",
+        "        #asumimos que no hay intercambios\n",
+        "        intercambio = False\n",
+        "        #con este for se comparan las parejas que no estan ordenadas\n",
+        "        for i in range(n-j):\n",
+        "            if lista[i] > lista[i+1] :\n",
+        "                # intercambio en una linea (swap)\n",
+        "                lista[i], lista[i+1] = lista[i+1], lista[i]\n",
+        "                intercambio = True\n",
+        "    #devuelve la lista solo para ser formales IN-SITU\n",
+        "    return lista\n",
+        "\n",
+        "# pruebas\n",
+        "lista_desordenada = [7, 1, 5, 8, 10, 15]\n",
+        "# se imprime lista desordenada\n",
+        "print(lista_desordenada)\n",
+        "# ya que el algoritmo trabaja in-situ no se necesitan memoria adicional\n",
+        "bubbleSort(lista_desordenada)\n",
+        "# se imprime la lista ordenada\n",
+        "print(lista_desordenada)\n",
+        "\n"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[7, 1, 5, 8, 10, 15]\n",
+            "[1, 5, 7, 8, 10, 15]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gr0r1luKy_K2"
+      },
+      "source": [
+        "## Análisis (sobre el tiempo de ejecución)\n",
+        "\n",
+        "Como ya sabemos es necesario identificar el peor caso de este algoritmo para comenzar a realizar el análisis de la complejidad del mismo.\n",
+        "\n",
+        "Y para poder indetificar el peor caso de nuevo es necesario preguntarse, **¿en qué situación este algoritmo alcanza el máximo número de intercambios?**.\n",
+        "\n",
+        "En este caso en particular la sugerencia (Hint) es notar que en cada iteración del algoritmo coloca en la última posición al elemento de mayor valor."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Rng80d2-0ICt"
+      },
+      "source": [
+        "## Orden de complejidad (cota superior asintótica)\n",
+        "\n",
+        "El toden de complejidad al que pertenece este algoritmo, respecto al número de operaciones (tiempo) es cuadrático, es decir $T(n)\\in O(n²)$.\n",
+        "\n",
+        "Se sugiere fuertemente que hagas el ejercicio (al menos informal) de demostrar que el algoritmo *BubbleSort* pertenece al orden cuadrático con respecto el tiempo.\n",
+        "\n",
+        "Justifica cada argumento que te lleve a esta conclusión."
       ]
     },
     {
