Creado mediante Colaboratory

--- a/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
+++ b/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
@@ -302,10 +302,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "DfeIm01msc7J",
-        "outputId": "10d761b6-b896-416c-f1e3-7eb47b744645",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "10d761b6-b896-416c-f1e3-7eb47b744645"
       },
       "source": [
         "# implementacion in-situ del algoritmo burbuja\n",
@@ -341,7 +341,7 @@
         "print(lista_desordenada)\n",
         "\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,7 +376,7 @@
       "source": [
         "## Orden de complejidad (cota superior asintótica)\n",
         "\n",
-        "El toden de complejidad al que pertenece este algoritmo, respecto al número de operaciones (tiempo) es cuadrático, es decir $T(n)\\in O(n²)$.\n",
+        "El orden de complejidad al que pertenece este algoritmo, respecto al número de operaciones (tiempo) es cuadrático, es decir $T(n)\\in O(n²)$.\n",
         "\n",
         "Se sugiere fuertemente que hagas el ejercicio (al menos informal) de demostrar que el algoritmo *BubbleSort* pertenece al orden cuadrático con respecto el tiempo.\n",
         "\n",
