Creado mediante Colaboratory

--- a/Introduccion/01_TorresHanoi_SCP.ipynb
+++ b/Introduccion/01_TorresHanoi_SCP.ipynb
@@ -433,7 +433,7 @@
       "source": [
         "# Análisis\n",
         "\n",
-        "Dada la descripción básica (y el código del algoritmo) podemos concluir que para $n-discos$ tomará **$T(n-1)$ movimientos**, mas **un movimiento**, mas **$T(n-1)$ movimientos**.\n",
+        "Dada la descripción básica (y el código del algoritmo) podemos concluir que para $n-discos$ tomará **$T(n-1)$ movimientos**, más **un movimiento**, más **$T(n-1)$ movimientos**.\n",
         "\n",
         "Lo cual nos lleva a definir la función de recurrencia de la siguiente forma.\n",
         "\n",
@@ -468,7 +468,7 @@
         "k=n-1\t\t& \\vdots & \\\\\n",
         "\t& = &\t2^{n-1}T(n-(n-1))+2^{n-1-1}+\\cdots+2+1 \\\\\n",
         "\t& = &\t2^{n-1}T(1)+2^{n-2}+\\cdots+2+1........T(1)=1 \\\\\n",
-        "\t& = &\t2^{n-1}+2^{n-2}+\\cdots+2+1......(suma) \\\\\n",
+        "\t& = &\t2^{n-1}+2^{n-2}+\\cdots+2^{2}+2+1......(suma\\,potencias\\,de\\,2) \\\\\n",
         "\t& = &\t2^{n}-1......\\square \\\\\n",
         "\\end{eqnarray*}$$"
       ]
