Creado mediante Colaboratory

--- a/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
+++ b/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
@@ -166,11 +166,11 @@
         "\n",
         "Para una mejor comprensión del tema de series, revisar este [enlace](https://colab.research.google.com/github/jugernaut/Prometeo/blob/master/01_Calculo/06_Series/01_Series.ipynb).\n",
         "\n",
-        "Visto de otra forma la ecuación (1) la podemos ver de esta forma.\n",
+        "Visto de otra forma la ecuación (1) la podemos expresar de esta forma.\n",
         "\n",
         "$$\\frac{n(n-1)}{2}=\\frac{n²-n}{2}=\\frac{n²}{2}-\\frac{n}{2}\\tag{2}$$\n",
         "\n",
-        "De la ecuación (2) la expresión que crece de manera más rápida es $\\frac{n²}{2}$, de tal manera que basta con acotar esta función para encontrar la cota superior asintótica de este algoritmo, ademas.\n",
+        "De la ecuación (2) el término que crece de manera más rápida es $\\frac{n²}{2}$, de tal manera que basta con acotar esta función para encontrar la cota superior asintótica de este algoritmo, ademas.\n",
         "\n",
         "$$\\frac{n²}{2}=\\frac{1}{2}n²$$\n",
         "\n",
