--- a/AlgoritmosOrdenamiento/02_MergeQuick.ipynb
+++ b/AlgoritmosOrdenamiento/02_MergeQuick.ipynb
@@ -37,8 +37,8 @@
         "  <font color=\"Black\" face=\"Comic Sans MS,arial\">\n",
         "  <h5 align=\"center\"><i>Profesor: M.en.C. Miguel Angel Pérez León.</i></h5>\n",
         "    <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón.</i></h5>\n",
-        "    <h5 align=\"center\"><i>Ayudante: Mario Arturo Nieto Butron.</i></h5>\n",
-        "  <h5 align=\"center\"><i>Seminario de programación en paralelo.</i></h5>\n",
+        "    <h5 align=\"center\"><i>Ayudante: Jonathan Ramírez Montes.</i></h5>\n",
+        "    <h5 align=\"center\"><i>Materia: Manejo de Datos.</i></h5>\n",
         "  </font>"
       ]
     },
