--- a/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
+++ b/AlgoritmosOrdenamiento/01_Ordenamientos.ipynb
@@ -36,9 +36,9 @@
         "  </font>\n",
         "  <font color=\"Black\" face=\"Comic Sans MS,arial\">\n",
         "  <h5 align=\"center\"><i>Profesor: M.en.C. Miguel Angel Pérez León</i></h5>\n",
-        "    <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón.</i></h5>\n",
-        "    <h5 align=\"center\"><i>Ayudante: Jonathan Ramírez Montes.</i></h5>\n",
-        "    <h5 align=\"center\"><i>Materia: Manejo de Datos.</i></h5>\n",
+        "    <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón</i></h5>\n",
+        "    <h5 align=\"center\"><i>Ayudante: Jonathan Ramírez Montes</i></h5>\n",
+        "    <h5 align=\"center\"><i>Materia: Manejo de Datos</i></h5>\n",
         "  </font>"
       ]
     },
