Creado mediante Colaboratory

--- a/AlgoritmosOrdenamiento/03_RadixBucket.ipynb
+++ b/AlgoritmosOrdenamiento/03_RadixBucket.ipynb
@@ -171,161 +171,14 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "eEEEkd74Ra-s"
-      },
-      "source": [
-        "## Algoritmo básico\n",
-        "\n",
-        "A continuación se muestra el pseudocódigo del algoritmo para ordenar por mezcla.\n",
-        "\n",
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/Numerico2021/blob/master/Imagenes/Merge/merge.PNG?raw=1\" width=\"600\"> \n",
-        "</center>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CdKfAPmTIUP7",
-        "outputId": "d1d1b098-350c-44e5-b589-926b165aaa9a"
-      },
-      "source": [
-        "# Algoritmo de ordenamiento\n",
-        "def mergeSort(lista):\n",
-        "    # si la coleccion es de tamano 1 o 0 se devuelve\n",
-        "    if (len(lista) < 2):\n",
-        "        return lista # 1 operacion\n",
-        "    # si no se parte la coleccion y se ordena recursivamente    \n",
-        "    else:\n",
-        "        medio = len(lista)//2\n",
-        "        izquierda = mergeSort(lista[:medio]) #T(n/2)\n",
-        "        derecha = mergeSort(lista[medio:])  #T(n/2)\n",
-        "        # se mezclan ambas listas (n operaciones)\n",
-        "        return merge(izquierda, derecha)\n",
-        "\n",
-        "# Algoritmo que mezcla 2 listas ordenadas\n",
-        "def merge(l1, l2):\n",
-        "    i,j=0,0\n",
-        "    mezcla=[]\n",
-        "    # mientras haya elementos, se comparan y se mezclan\n",
-        "    while(i < len(l1) and j < len(l2)):\n",
-        "        if l1[i] <= l2[j]:\n",
-        "            mezcla.append(l1[i])\n",
-        "            i = i+1\n",
-        "        else:\n",
-        "            mezcla.append(l2[j])\n",
-        "            j = j+1  \n",
-        "    # agrega lo que falta, si i o j ya son len(lista) no agregan\n",
-        "    mezcla += l1[i:]\n",
-        "    mezcla += l2[j:]\n",
-        "    # se devuelve la coleccion ordenada\n",
-        "    return mezcla\n",
-        "\n",
-        "print(mergeSort([2,8,5,3,9,4,1,7]))"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[1, 2, 3, 4, 5, 7, 8, 9]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "A8nU41pJRxKf"
-      },
-      "source": [
-        "## ¿Qué sucede con colecciones de tamaño $n$?\n",
-        "\n",
-        "Dado el análisis (y el pseudocódigo del algoritmo) podemos ver que ordenar una colección de tamaño $n$ tomara $2T(\\frac{n}{2})+a\\cdot n$. Pero este valor aun no permite identificar a que orden de complejidad pertenece este algoritmo.\n",
-        "\n",
-        "Es por eso que necesitamos definir la función de recurrencia de la siguiente forma.\n",
-        "\n",
-        "Función de recurrencia para el algoritmo de ordenamiento *MergeSort*:\n",
-        "\n",
-        "$$T(n)=\\begin{cases}\n",
-        "b & n=0\\,\\acute{o}\\,n=1\\\\\n",
-        "2T(\\frac{n}{2})+a\\cdot n & n\\geq2\n",
-        "\\end{cases} \\tag{1}$$\n",
-        "\n",
-        "A la función (1), se le conoce como la función de recurrencia asociada al algoritmo de ordenamiento *MergeSort*. Ya que conocemos la función de recurrencia podemos tratar de determinar de manera formal cuantas operaciones le toma a este algoritmo ordenar una colección de datos.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "iczZjvRuSCCk"
-      },
-      "source": [
-        "## Demostración\n",
-        "\n",
-        "Esta demostración se sustenta en el análisis realizado previamene y en el [teorema maestro](https://es.wikipedia.org/wiki/Teorema_maestro).\n",
-        "\n",
-        "Sea $T(n)$ el numero de operaciones que le toma al algoritmo anterior ordenar una lista de tamaño $n$ y dada la función de recurrencia. \n",
-        "\n",
-        "P.D. $$T(n)=n\\cdot b+a\\cdot n\\cdot\\log_{2}n$$\n",
-        "\n",
-        "Para mayor claridad de la demostración definimos $n=2^{k}$\n",
-        "\n",
-        "$$\\begin{eqnarray*}\n",
-        "T(n)\t& = &\tT(2^{k}) \\\\\n",
-        "  & = & 2T(2^{k-1})+a\\cdot2^{k}....Definición\\\\\n",
-        "  & = & 2(2T(2^{k-2})+a\\cdot2^{k-1})+a\\cdot2^{k}.....Leyes\\,exponentes\\,y\\,Función\\,recurrencia \\\\\n",
-        "  & = & 2^{2}T(2^{k-2})+a\\cdot2^{k}+a\\cdot2^{k}.......Algebra\\,elemental\\\\\n",
-        "\t& = & 2^{2}(2T(2^{k-3})+a\\cdot2^{k-2})+2\\cdot a\\cdot2^{k}.....Función\\,recurrencia\\\\ \n",
-        "i-veces & \\vdots & \\\\\n",
-        "\t& = & 2^{i}T(2^{k-i})+i\\cdot a\\cdot2^{k} \\\\\n",
-        "i=k\t\t& \\vdots & \\\\\n",
-        "\t& = & 2^{k}T(2^{k-k})+k\\cdot a\\cdot2^{k}......2^{k-k}=1 \\\\\n",
-        "\t& = &\t2^{k}b+k\\cdot a\\cdot2^{k}........T(1)=b \\\\\n",
-        "\t& = &\tn\\cdot b+k\\cdot a\\cdot n......n=2^{k} \\\\\n",
-        "\t& = &\tn\\cdot \\color{red}b+ \\color{red}a\\cdot n\\cdot\\log_{2}n....(2) \\\\\n",
-        "\\end{eqnarray*}$$\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7NJYrNzSSYxe"
-      },
-      "source": [
-        "## Orden de complejidad (cota superior asintótica)\n",
-        "\n",
-        "Ya que $a$ y $b$ son constantes podemos concluir que de la ecuación (2), la función que 'crece' más rápido es \n",
-        "\n",
-        "$$a\\cdot n\\cdot\\log_{2}n$$\n",
-        "\n",
-        "Esa es la función que **acota superiormente el desempeño del algoritmo** *MergeSort*.\n",
-        "\n",
-        "Finalmente si asumimos que $a=c$, entonces se puede concluir que $T(n)\\in O(n\\cdot\\log_{2}n)$, es decir que el orden de complejidad al cual pertenece el algoritmo *MergeSort* es $n\\cdot\\log_{2}n$.\n",
-        "\n",
-        "En otras palabras podemos decir que el numero de operaciones que le toma a *MergeSort* ordenar una colección de tamaño $n$ es proporcional a $n\\cdot\\log_{2}n$.\n",
-        "\n",
-        "Esto significa (con sustento matemático) que *MergeSort* tiene un mejor desempeño que *InsertionSort, SeleccionSort* o *BubbleSort* en cuanto a la cantidad de operaciones (tiempo) que le toma ordenar una colección de datos.\n",
-        "\n",
-        "En otros términos podemos decir que si pusiéramos a competir (en términos de tiempo) a *MergeSort* contra, por ejemplo *BubbleSort*, el ganador seria *MergeSort*.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "qjDkvoF89_3n"
       },
       "source": [
-        "# QuickSort\n",
+        "# Ordenamiento por cubetas (*BucketSort*)\n",
         "\n",
-        "Otro de los algoritmos que ha mostrado un desempeño muy bueno en términos de tiempo de ejecución es el algoritmo conocido como *QuickSort*.\n",
+        "Este algoritmo (no comparativo) consiste en generar contenedores (cubetas) que cumplan con determinadas caracteristicas, enviar a los elementos que cumplan con estas a su respectivo contenedor y ordenar cada contenedor de manera individual.\n",
         " \n",
-        "La forma en la que funciona *QuickSort* es muy similar a *MergeSort* en el sentido de que inicialmente se tiene un conjunto o estructura de datos (lista, vector, arreglo, etc) de tamaño $n$ que se encuentran desordenados y que mediante algún atributo podemos ordenar. La diferencia entre ambos algoritmos es que *QuickSort* se toma un **pivote** para poder acomodar a los menores y mayores. \n",
+        "De manera similar a *RadixSort*, para el ótimo funcionamiento de este algoritmo se requiere que los elementos a ordenar se ecuentren distribuidos de manera uniforme sobre el espacio a ordenar.\n",
         "\n",
         "1.   Tomamos un valor de la lista de datos a ordenar (que idealmente parte a la colección a la mitad), a ese valor le llamamos pivote.\n",
         "2.   Una vez que se eligió al pivote, comparamos a todos los elementos contra el pivote y **almacenamos los menores al lado izquierdo del pivote y a los mayores del lado derecho** los cual nos deja 2 subconjuntos de tamaño $\\frac{n}2$.\n",
