--- a/AlgoritmosOrdenamiento/03_RadixBucket.ipynb
+++ b/AlgoritmosOrdenamiento/03_RadixBucket.ipynb
@@ -176,19 +176,7 @@
       "source": [
         "# Ordenamiento por cubetas (*BucketSort*)\n",
         "\n",
-        "Este algoritmo (no comparativo) consiste en generar contenedores (cubetas) que cumplan con determinadas caracteristicas, enviar a los elementos que cumplan con estas a su respectivo contenedor y ordenar cada contenedor de manera individual.\n",
-        " \n",
-        "De manera similar a *RadixSort*, para el ótimo funcionamiento de este algoritmo se requiere que los elementos a ordenar se ecuentren distribuidos de manera uniforme sobre el espacio a ordenar.\n",
-        "\n",
-        "1.   Tomamos un valor de la lista de datos a ordenar (que idealmente parte a la colección a la mitad), a ese valor le llamamos pivote.\n",
-        "2.   Una vez que se eligió al pivote, comparamos a todos los elementos contra el pivote y **almacenamos los menores al lado izquierdo del pivote y a los mayores del lado derecho** los cual nos deja 2 subconjuntos de tamaño $\\frac{n}2$.\n",
-        "2.   Posteriormente volvemos a tomar un pivote en cada una de las respectivas subconjuntos, e idealmente volvemos a dividir estas en 4 subconjuntos de tamaño $\\frac{n}4$, se repite este proceso hasta que se tienen subconjuntos de tamaño 2.\n",
-        "3.   Ya que se tienen conjuntos de tamaño a lo mas 2, se ordenan de manera individual cada uno de ellos.\n",
-        "4.   Cada uno de estos subconjuntos ordenados se mezclan de manera recursiva y ordenada, hasta que todo el conjunto de datos se encuentran ordenados.\n",
-        "\n",
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ProgramacionEnParalelo/blob/desarrollo/Imagenes/Introduccion/quicksort.jpg?raw=1\" width=\"550\">\n",
-        "</center> "
+        "Este algoritmo (no comparativo) consiste en generar contenedores (cubetas) que cumplan con determinadas caracteristicas, enviar a los elementos que cumplan con estas a su respectivo contenedor y ordenar cada contenedor de manera individual."
       ]
     },
     {
@@ -197,65 +185,19 @@
         "id": "gsxkxdZvznIp"
       },
       "source": [
-        "## Análisis\n",
+        "## Descripción\n",
         "\n",
-        "Para el caso cuando se requiere ordenar una colección (lista) de tamaño 1 (o 0 caso trivial), basta con devolver dicha lista ya que esta ya esta ordenada, lo cual toma tiempo constante, digamos $b$, podemos pensar que este valor $b$ **es el tiempo que le toma al microprocesador de propósito general ejecutar la instrucción** *return*.\n",
+        "De manera similar a *RadixSort*, para el ótimo funcionamiento de este algoritmo se requieren ciertas caracteristicas y en este caso es que los elementos a ordenar se ecuentren distribuidos de manera uniforme sobre el espacio a ordenar. A continuación una descripción de como funciona este algoritmos:\n",
         "\n",
-        "Para el caso de una colección de tamaño 2 ó mayor, es necesario partir a la mitad dicha colección, ordenar ambas subcolecciones y mezclarlas. Ahora consideremos que para simplificar el análisis de la complejidad diremos que $a$ es el **tiempo que toma al microprocesador realizar una operación lógica o aritmética**.\n",
+        "1.   Dado que se conoce a priori el espacio donde se distribuyen los elementos a ordenar, se genéran contenedores (cubetas) con ciertas caracteristicas, por ejemplo un rango de valores, para almacenar a los elementos que cumplan con estas caracteristicas.\n",
+        "2.   Se recorren todos los elementos a ordenar y se va colocando uno a uno en el contenedor correspondiente.\n",
+        "2.   Se ordena cada contenedor de manera individual con este mismo algoritmo (o con alguno visto previamente.\n",
+        "3.   Se extraen los elementos de cada contenedor comenzando con el contenedor que almacene a los elementos de menor valor y finalizando con el contenedor que almacena a los elementos de mayor valor.\n",
+        "4.   El algoritmo termina cuando los elementos del último contener han sido extraidos.\n",
         "\n",
-        "Es por esto que ordenar una colección de tamaño $n$ tomará en total.\n",
-        "\n",
-        "$$2T(\\frac{n}{2})+a\\cdot n$$\n",
-        "\n",
-        "Similar al tiempo que le toma ordenar una colección al algoritmo MergeSort."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "x1UrNM561WKo",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "fd0baeee-05cc-4422-bc23-bc414446c5b5"
-      },
-      "source": [
-        "# Definicion recursiva de quicksort\n",
-        "def quickSort(lista):\n",
-        "  # si la lista es de tamano 1 o menor se devuelve\n",
-        "  if len(lista) < 2:\n",
-        "    return lista\n",
-        "  # en otro caso se parte la lista y se resuelve recursivamente\n",
-        "  else:\n",
-        "    # se parte la lista original (n operaciones)\n",
-        "    menores, pivote, mayores = particion(lista) \n",
-        "    # 2*T(n/2)\n",
-        "    return quickSort(menores)+[pivote]+quickSort(mayores)\n",
-        "\n",
-        "# Definicion del algoritmo para partir una lista en mayores y menores\n",
-        "def particion(lista):\n",
-        "  mayores, menores = [], []\n",
-        "  # pivote para realizar la comparación\n",
-        "  pivote = lista[0]\n",
-        "  for i in range(1,len(lista)):\n",
-        "    if lista[i] < pivote:\n",
-        "      menores.append(lista[i])\n",
-        "    else:\n",
-        "      mayores.append(lista[i])\n",
-        "  # se devuelven ambas listas y el pivote\n",
-        "  return menores, pivote, mayores\n",
-        "\n",
-        "print(quickSort([2,8,5,3,9,4,1,7]))"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[1, 2, 3, 4, 5, 7, 8, 9]\n"
-          ],
-          "name": "stdout"
-        }
+        "<center>\n",
+        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosOrdenamiento/BucketSort.jpg?raw=1\" width=\"550\">\n",
+        "</center> "
       ]
     },
     {
@@ -264,10 +206,66 @@
         "id": "ou8sIl3O27CY"
       },
       "source": [
-        "## Orden de complejidad (cota superior asintótica)\n",
+        "## Ejemplo\n",
         "\n",
-        "Dado que la función de recurrencia de *QuickSort* es idéntica a la del algoritmo *MergeSort*, el orden de complejidad al que pertenece el algoritmo *QuickSort* es idéntico al de *MergeSort*, es decir $T(n)\\in O(n\\cdot\\log_{2}n)$.\n",
+        "En la imagen superior se muestra un ejemplo en el cuál se busca ordenar los datos.\n",
+        "\n",
+        "$$\n",
+        "\\left[11\\right]\\left[9\\right]\\left[21\\right]\\left[8\\right]\\left[17\\right]\\left[19\\right]\\left[13\\right]\\left[1\\right]\\left[24\\right]\\left[12\\right]$$\n",
+        "\n",
+        "Dado que se conoce a priori el rango en el cuál se encuentran distribuidos los datos, podemos generar 5 contenedores que abarcan los rangos.\n",
+        "\n",
+        "$$\n",
+        "\\left[0,5\\right),\\left[5,10\\right),\\left[10,15\\right),\\left[15,20\\right),\\left[20,26\\right)\n",
+        "$$\n",
+        "\n",
+        "Y al organizar los datos en los contenedres se verían así:\n",
+        "\n",
+        "$$\n",
+        "\\begin{array}{cc}\n",
+        "\\left[0,5\\right): & 1\\\\\n",
+        "\\left[5,10\\right): & 9,8\\\\\n",
+        "\\left[10,15\\right): & 11,13,12\\\\\n",
+        "\\left[15,20\\right): & 17,19\\\\\n",
+        "\\left[2,26\\right): & 21,24\n",
+        "\\end{array}\n",
+        "$$\n",
+        "\n",
+        "Después de ordenar cada contenedor individualmente, los contenedores se ven así:\n",
+        "\n",
+        "$$\n",
+        "\\begin{array}{cc}\n",
+        "\\left[0,5\\right): & 1\\\\\n",
+        "\\left[5,10\\right): & 8,9\\\\\n",
+        "\\left[10,15\\right): & 11,12,13\\\\\n",
+        "\\left[15,20\\right): & 17,19\\\\\n",
+        "\\left[2,26\\right): & 21,24\n",
+        "\\end{array}\n",
+        "$$\n",
+        "\n",
+        "Y al extraer todos los datos de cada contenedor, de manera ordenada los datos finalmente quedan ordenados.\n",
+        "\n",
+        "$$\n",
+        "\\left[1\\right]\\left[8\\right]\\left[9\\right]\\left[11\\right]\\left[12\\right]\\left[13\\right]\\left[17\\right]\\left[19\\right]\\left[21\\right]\\left[24\\right]$$\n",
+        "\n",
+        "\n",
+        "\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KjHjPb_U4TbJ"
+      },
+      "source": [
+        "## Análisis y Orden de complejidad\n",
+        "\n",
+        "Para llevar a cabo el análisis de la complejidad hay que preguntarse ¿qué tipo de algoritmo de ordenamiento se usará para ordenar individualmente cada cubeta y eso ayuda a determinar el orden de complejidad al que pertenece este algoritmo.\n",
+        "\n",
+        "Algunos autores consideran a *RadixSort* un caso particular de *BucketSort*. \n",
+        "\n",
+        "Se deja como ejercicio determinar el orden de complejidad al que pertenece el algoritmo *BucketSort*."
       ]
     },
     {
@@ -278,7 +276,7 @@
       "source": [
         "# Ordenando Objetos\n",
         "\n",
-        "Es importante notar que este y todos los algoritmos de ordenamiento vistos funcionan con cualquier objeto que sea ordenable (realizando las respectivas adecuaciones), es decir, con todo clase de objetos en la que podamos establecer un orden, por ejemplo: $\\mathbb{N},\\,\\mathbb{Z},\\,\\mathbb{Q},\\,\\mathbb{R}$, incluso con $\\mathbb{C}$ o elementos más complejos como vectores, matrices, palabras o todo aquello en lo que podamos establecer un orden."
+        "Es importante notar que este y todos los algoritmos de ordenamiento vistos funcionan con cualquier objeto que sea ordenable (realizando las respectivas adecuaciones), es decir, con todo clase de objetos en la que podamos establecer un orden, por ejemplo: $\\mathbb{N},\\,\\mathbb{Z},\\,\\mathbb{Q},\\,\\mathbb{R}$, incluso con $\\mathbb{C}$ o elementos más complejos como **vectores, matrices, palabras o todo aquello en lo que podamos establecer un orden**."
       ]
     },
     {
@@ -287,11 +285,11 @@
         "id": "pc6ND99T6HDA"
       },
       "source": [
-        "## Ley de Amdahal\n",
+        "## Algoritmos de ordenamiento en paralelo\n",
         "\n",
-        "Sea $f$ la fracción de operaciones en un calculo computacional que será llevado a cabo de manera secuencial, donde $0\\leq f\\leq1$. La máxima velocidad $\\Psi$ alcanzada mediante programación en paralelo con una computadora con $p$ procesadores enfocados en el mismo calculo es:\n",
+        "Todos los algoritmos vistos funcionan de manera **secuencial**, es decir se realiza un paso (operacion) a la vez, sin embargo esta estrategia (secuencial) es prácticamente obsoleta.\n",
         "\n",
-        "$$\\Psi\\leq\\frac{1}{f+(1-f)/p}$$"
+        "¿Si tuvieramos más de una unidad de procesamiento (CPU), podríamos **implementar algunos de estos algoritmos en paralelo**?."
       ]
     },
     {
