Creado mediante Colaboratory

--- a/AlgoritmosOrdenamiento/02_MergeQuick.ipynb
+++ b/AlgoritmosOrdenamiento/02_MergeQuick.ipynb
@@ -56,8 +56,8 @@
         "\n",
         "1.   Partir el conjunto en 2 subconjuntos de tamaño $\\frac{n}2$.\n",
         "2.   Posteriormente volver a dividir estos en 4 subconjuntos de tamaño $\\frac{n}4$, se repite este proceso hasta que se tienen subconjuntos de tamaño 2.\n",
-        "3.   Ya que se tienen conjuntos de tamaño a lo mas 2, se ordenan de manera individual cada uno de ellos.\n",
-        "4.   Cada uno de estos subconjuntos ordenados se mezclan de manera recursiva y ordenada, hasta que todo el conjunto de datos se encuentran ordenados.\n",
+        "3.   Ya que se tienen conjuntos de tamaño a lo más 1, se toma un par de estos elementos y se mezclan para formar un subconjunto ordenado.\n",
+        "4.   Cada uno de estos subconjuntos ordenados se mezclan de manera recursiva y ordenada, hasta que todo el conjunto de datos se encuentra ordenado.\n",
         "\n",
         "<center>\n",
         "<img src=\"https://github.com/jugernaut/ProgramacionEnParalelo/blob/desarrollo/Imagenes/Introduccion/merge.gif?raw=1\" width=\"550\">\n",
