Creado mediante Colaboratory

--- a/AlgoritmosBusqueda/01_BusquedaSecuencial.ipynb
+++ b/AlgoritmosBusqueda/01_BusquedaSecuencial.ipynb
@@ -34,11 +34,12 @@
       },
       "source": [
         "<font color=\"Teal\" face=\"Comic Sans MS,arial\">\n",
-        "  <h1 align=\"center\"><i>Búsqueda Binaria</i></h1>\n",
+        "  <h1 align=\"center\"><i>Búsqueda Secuencial</i></h1>\n",
         "  </font>\n",
         "  <font color=\"Black\" face=\"Comic Sans MS,arial\">\n",
         "  <h5 align=\"center\"><i>Profesor: M.en.C. Miguel Angel Pérez León</i></h5>\n",
-        "    <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón</i></h5>\n",
+        "  <h5 align=\"center\"><i>Ayudante: Jesús Iván Coss Calderón</i></h5>\n",
+        "  <h5 align=\"center\"><i>Ayudante: Jonathan Ramirez Montes</i></h5>\n",
         "  <h5 align=\"center\"><i>Materia: Manejo de Datos</i></h5>\n",
         "  </font>"
       ]
@@ -49,14 +50,13 @@
         "id": "T5lrtG35TPHg"
       },
       "source": [
-        "##**Introducción**\n",
+        "# Introducción\n",
         "\n",
-        "En clase se dio la descripción del algoritmo de búsqueda binaria.\n",
+        "El algoritmo de busnqueda secuencial (o lineál) es uno de los algoritmos de búsqueda más sencillos de comprender y fáciles de implementar.\n",
         "\n",
-        " \n",
-        "Es por este motivo que en este documento se parte del hecho que el lector conoce tanto el planteamiento, como el pseudocódigo de este algoritmo.\n",
+        "La forma de trabajar de este algoritmo es iterar sobre la estructura de datos (lista, vector, colección, etc.) elemento por elemento hasta encontrar el dato buscado.\n",
         "\n",
-        "Dado estos antecedentes procedemos a definir la función de recurrencia, para poder definir a que orden de complejidad pertenece este algoritmo **recursivo**."
+        "Vale la pena recalcar que este algoritmo no pide prerequisito alguno y funciona en cualquier caso, sin importar la longitud o el orden en el que se encuentren los elementos de la colección."
       ]
     },
     {
@@ -65,7 +65,15 @@
         "id": "KbdCyfv2T4b3"
       },
       "source": [
-        "##**Función de Recurrencia**"
+        "# Descripción\n",
+        "\n",
+        "De manera formal podemos describir el funcionamiento del algoritmo de la siguiente manera:\n",
+        "\n",
+        "1.   El algoritmo toma como entrada una colección de datos y un elemento ó dato a buscar.\n",
+        "2.   Se itera (recorre) toda la colección, elemento por elemento y se compara cada elemento con el elemento que se busca.\n",
+        "3.   Una vez localizado el elemento a buscar se devuelve el valor *True*, el índice de la colección donde se localizo el dato ó el elemento en si.\n",
+        "4.   En caso de no encontrarse el elemento a buscar, se devuelve *False* o *None*.\n",
+        "5.   Fin del algoritmo."
       ]
     },
     {
@@ -74,27 +82,23 @@
         "id": "Mz9tfZ-sUdsC"
       },
       "source": [
-        "### Análisis\n",
+        "# Análisis\n",
         "\n",
-        "Para el caso cuando se requiere buscar un elemento en una colección (lista) de tamaño 1 (o 0 caso trivial), basta con realizar a lo mas una comparación, lo cual toma tiempo constante, digamos $b$.\n",
+        "El análisis de la complejidad de este algoritmo es de lo más sencillo y para no perder la costumbre, tratemos de identificar el peor caso para poder comenzar con el análisis de la complejidad de este algoritmo.\n",
         "\n",
-        "Es importante recalcar que este algoritmo pide como requisito que los **elementos de la colección se encuentren ordenados**. Para el caso de una colección de tamaño 2 ó mayor, es necesario partir a la mitad dicha colección y preguntar si el elemento que se busca es mayor o menor al elemento que se encuentra a la mitad de la colección. Y dependiendo de la comparación se descarta una de las 2 mitades y se procede a buscar al elemento en la otra mitad.\n",
+        "Para una colección de datos de longitud 0 ó 1, este algoritmo **realiza una sola operación**, ya que a lo más se tiene un elemento con el cuál compar el dato a buscar\n",
         "\n",
-        "Es por esto que buscar un elemento en una colección de tamaño $n$ tomará en total $T(\\frac{n}{2})+a$."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "kg6_8TGwU3nw"
-      },
-      "source": [
-        "###Algoritmo Básico\n",
+        "En una colección de longitud 2 (y suponinedo que el dato a buscar se encuentra en la ultima localidad de la colección), este algoritmo **realiza 2 comparaciones**, una por cada elemento de la colección.\n",
         "\n",
+        "Si se tiene una colección de longitud 3 (y considerando el peor caso), este algoritmo **realiza 3 comparaciones**.\n",
         "\n",
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/BBR.png?raw=1\" width=\"600\"> \n",
-        "</center>\n"
+        "| Longit de la colección $(n)$ | Número de copmaraciones | \n",
+        "| :-:           |           :-:              | \n",
+        "| 1       | $T(1)=1$ | \n",
+        "| 2       | $T(2)=2$ |\n",
+        "| 3       | $T(3)=3$ |\n",
+        "| ..      | ........ |\n",
+        "| $n$       | $T(n)=?$ |"
       ]
     },
     {
@@ -103,20 +107,23 @@
         "id": "p9dw-XZfU9-d"
       },
       "source": [
-        "### ¿Qué sucede con colecciones de tamaño n?\n",
+        "## ¿Qué sucede con colecciones de tamaño $n$?\n",
         "\n",
-        "Dado el análisis (y el pseudocódigo del algoritmo) podemos ver que buscar un dato en una colección de tamaño $n$ tomara $T(\\frac{n}{2})+a$. Pero este valor aun no permite identificar a que orden de complejidad pertenece este algoritmo.\n",
+        "Supongamos que se tiene una colección $A$ de datos de longitud $n$ y se busca el dato $x$ (donde $x$ no está restringido a ser un valor numérico).\n",
         "\n",
-        "Es por eso que necesitamos definir la función de recurrencia de la siguiente forma.\n",
+        "$$\n",
+        "A=\\underset{n-elementos}{\\underbrace{\\left[a\\right]_{0}\\left[b\\right]_{1}\\cdots\\left[x\\right]_{n-1}}}\n",
+        "$$\n",
         "\n",
-        "Función de recurrencia para el algoritmo de busqueda binaria:\n",
+        "Es importante notar que hay diferencia entre el contenido de cada elemento y el índice que caracteriza a cada elemento, el algoritmo indica que se tiene que recorrer toda la colección (elemento por elemento) hasta localizar el dato $x$.\n",
         "\n",
-        "$$T(n)=\\begin{cases}\n",
-        "b, & n=0\\,\\acute{o}\\,n=1\\\\\n",
-        "T(\\frac{n}{2})+a & n\\geq2\n",
-        "\\end{cases}$$\n",
+        "De tal manera que el peor caso para este algoritmo sería cuando el dato a buscar se encuentra en la útima posición de la colección (como se muestra en la imagen), ya que en ese caso el algoritmo tiene que realizar **$n$ comparaciones**, una por cada dato de la colección.\n",
         "\n",
-        "Con lo que podemos concluir que..."
+        "Por lo tanto para una colección de datos de longitud $n$ este algoritmo realiza $n$ compraciones, en otras palabras.\n",
+        "\n",
+        "$$\n",
+        "T(n) \\in O(n)\n",
+        "$$"
       ]
     },
     {
@@ -125,7 +132,9 @@
         "id": "QYlAJsDnXYUX"
       },
       "source": [
-        "##**Demostración**"
+        "## Demostración\n",
+        "\n",
+        "En este caso (y algunos otros) **no hace falta una demostración formal matemática** para mostrar que este algoritmo pertenece al orden lineal, basta con identificar el peor caso y justificar el número de comparaciones que este algoritmo realiza para colecciones de longitud arbirtraria."
       ]
     },
     {
@@ -134,12 +143,7 @@
         "id": "FZoa-33-aGV3"
       },
       "source": [
-        "Sea $T(n)$ el número de operaciones que le toma al algoritmo anterior buscar un dato en una lista de tamaño $n$ y dada la función de recurrencia. *P.D.* $T(n)=\\log n$, para mayor claridad de la demostración definimos $n=2^{k}$\n",
-        "\n",
-        "\n",
-        "<center>\n",
-        "<img src=\"https://github.com/jugernaut/ManejoDatos/blob/desarrollo/Imagenes/AlgoritmosBusqueda/Demostracion.png?raw=1\" width=\"600\"> \n",
-        "</center>"
+        "En este caso (y algunos otros) **no hace falta una demostración formal matemática** para mostrar que este algoritmo pertenece al orden lineal, basta con identificar el peor caso y justificar el número de comparaciones que este algoritmo realiza para colecciones de longitud arbirtraria.\n"
       ]
     },
     {
@@ -148,7 +152,48 @@
         "id": "sIGxdX_5canB"
       },
       "source": [
-        "##**Orden de Complejidad (cota superior asintótica)**\n"
+        "# Búsqueda secuencial (valores numéricos)\n",
+        "\n",
+        "En este ejemplo vamos a ver la versión de la búsqueda secuencial utilizando valores numéricos y más adelante mostramos el caso general con objetos.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iuSyb2A5YWwO",
+        "outputId": "55d57d98-6657-45ac-ffbd-bf27a1a2b2f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "''' Algoritmo que implementa la búsqueda secuencial\n",
+        "    coleccion: coleccion de datos\n",
+        "    dato?      dato a buscar en la coleccion\n",
+        "'''\n",
+        "def b_secuencial(coleccion, valor):\n",
+        "  for i in range(len(coleccion)):\n",
+        "    if coleccion[i] == valor:\n",
+        "      return i\n",
+        "  return False\n",
+        "\n",
+        "# pruebas del algoritmo\n",
+        "# coleccion de datos\n",
+        "col = [0, -1, 19, 5, 25, 55]\n",
+        "# dato a buscar\n",
+        "valor = 55\n",
+        "#valor = 105\n",
+        "print(b_secuencial(col, valor))"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
       ]
     },
     {
@@ -157,15 +202,9 @@
         "id": "gcfm-WeEc0f2"
       },
       "source": [
-        "Dado que de $b$ (una constante) y $a\\cdot\\log_{2}n$, la última es la función que 'crece' mas rápidamente.\n",
+        "En la implementación de la celda superior se busca un valor numérico y en caso de encontrar el valor se devuelve el indice (no el valor) del dato buscado.\n",
         "\n",
-        "Se puede concluir que $T(n)\\in O(\\log_{2}n)$, es decir que el orden de complejidad al cual pertenece el algoritmo Búsqueda Binaria es $\\log_{2}n$.\n",
-        "\n",
-        "En otras palabras podemos decir que el numero de operaciones que le toma a Búsqueda Binaria buscar un dato en una colección ordenada de tamaño $n$ **es proporcional a** $\\log_{2}n$.\n",
-        "\n",
-        "Esto significa (con sustento matemático) que Búsqueda Binaria tiene un mejor desempeño que Búsqueda Lineal en cuanto a la cantidad de operaciones (tiempo) que le toma buscar un dato en una colección de datos.\n",
-        "\n",
-        "En otros términos podemos decir que si pusiéramos a competir a la Búsqueda Lineal contra, por ejemplo Búsqueda Binaria, el ganador seria **Búsqueda Binaria**."
+        "En otro caso se devuelve False, lo que indica que el valor no se encontraba en la colección."
       ]
     },
     {
